--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit==1.22.0
-fastapi==0.95.2
-uvicorn==0.22.0
-google-api-python-client==2.86.0
-yt-dlp==2023.3.4
-pydub==0.25.1
-python-dotenv==1.0.0
-python-multipart==0.0.6
 
+flask==2.0.1
+flask-cors==3.0.10
+python-dotenv==0.19.0
+google-api-python-client==2.15.0
+yt-dlp==2021.6.6
+pydub==0.25.1
+gunicorn==20.1.0
