--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,11 @@
-
+services:
+  - type: web
+    name: youtube-mashup-creator
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.8.0
+    packages:
+      - ffmpeg
