--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python-dotenv==1.0.0
-streamlit==1.22.0
-google-api-python-client==2.86.0
+flask==2.1.0
+python-dotenv==0.19.2
+google-api-python-client==2.47.0
 yt-dlp==2023.3.4
 pydub==0.25.1
-ratelimit==2.2.1
+requests==2.27.1
