--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-Flask>=2.3.3
-
-# Environment variables
-python-dotenv>=1.0.0
-
-# YouTube download
-yt-dlp>=2023.12.30
-
-# Audio processing
-numpy>=1.24.3
-SoundFile>=0.12.1
-moviepy>=1.0.3
-gunicorn==20.1.0
+Flask==3.0.0
+python-dotenv==1.0.0
+yt-dlp==2024.3.10
+soundfile==0.12.1
+scipy==1.12.0
+numpy==1.26.4
+moviepy==1.0.3
+email-validator==2.1.0
+concurrent-futures==3.0.5
+logging==0.5.1.2
+multiprocessing==0.70.15
