--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==2.3.3
-python-dotenv==1.0.0
-yt-dlp==2024.3.10
-soundfile==0.12.1
-scipy==1.9.3
+flask==2.3.3
+python-dotenv==0.21.1
+yt-dlp==2023.11.16
 numpy==1.24.3
+scipy==1.9.3
 moviepy==1.0.3
 email-validator==1.3.1
+PySoundFile==0.9.0.post1
