--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-flask==2.3.3
-python-dotenv==0.21.1
-yt-dlp==2023.11.16
-numpy==1.24.3
-scipy==1.9.3
+flask==2.0.3
+python-dotenv==0.19.2
+yt-dlp==2023.3.4
+numpy==1.21.6
+scipy==1.7.3
 moviepy==1.0.3
-email-validator==1.3.1
-PySoundFile==0.9.0.post1
+dnspython==2.3.0
+email-validator==1.1.3
+sounddevice==0.4.6
+cffi==1.15.1
