--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-flask==2.0.3
-python-dotenv==0.19.2
-yt-dlp==2023.3.4
-numpy==1.21.6
-scipy==1.7.3
-moviepy==1.0.3
-dnspython==2.3.0
-email-validator==1.1.3
-sounddevice==0.4.6
-cffi==1.15.1
+Flask>=2.0.0
+python-dotenv>=0.19.0
+google-api-python-client>=2.0.0
+yt-dlp>=2023.3.4
+pydub>=0.25.1
+requests>=2.26.0
+email-validator>=1.1.3
+concurrent-futures>=3.0.5
+multiprocessing>=0.70.12
+PySocks>=1.7.1  # For SOCKS proxy support
