--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,4 @@ yt-dlp>=2023.3.4
 pydub>=0.25.1
 requests>=2.26.0
 email-validator>=1.1.3
-concurrent-futures>=3.0.5
-multiprocessing>=0.70.12
-PySocks>=1.7.1  # For SOCKS proxy support
+PySocks>=1.7.1
